--- a/distsys/Cargo.toml
+++ b/distsys/Cargo.toml
@@ -7,8 +7,30 @@ edition = "2024"
 name = "mrsequential"
 path = "bin/mrsequential.rs"
 
+[[bin]]
+name = "mrworker"
+path = "bin/mrworker.rs"
+
+[[bin]]
+name = "mrmaster"
+path = "bin/mrmaster.rs"
+
 [dependencies]
 anyhow = "1.0.97"
 clap = { version = "4.5.34", features = ["derive"] }
 regex = "1.11.1"
+
 tokio = { version = "1.44.1", features = ["full"] }
+prost = "0.13.5"
+serde = { version = "1.0.219", features = ["serde_derive"] }
+tonic = { version = "0.12.3", features = ["zstd", "gzip", "tls"] }
+tower = { version = "0.5.2", features = ["full"] }
+hyper = { version = "1.6.0", features = ["full"] }
+hyper-util = { version = "0.1.10", features = ["full"] }
+log = "0.4.27"
+tokio-stream = { version = "0.1.17", features = ["full"] }
+async-stream = "0.3.6"
+tracing-subscriber = "0.3.19"
+
+[build-dependencies]
+tonic-build = { version = "0.12.3", features = ["prost"] }
