--- a/distsys/Cargo.toml
+++ b/distsys/Cargo.toml
@@ -31,6 +31,7 @@ log = "0.4.27"
 tokio-stream = { version = "0.1.17", features = ["full"] }
 async-stream = "0.3.6"
 tracing-subscriber = "0.3.19"
+futures = "0.3.31"
 
 [build-dependencies]
 tonic-build = { version = "0.12.3", features = ["prost"] }
